<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/selina_farzaei_1"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/padreUno"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hidden_texto"
        android:textColorHint="@color/texto_secundario"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/insert_der">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputUno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/texto_usuario"
            android:textSize="@dimen/input"
            android:textStyle="italic" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/padreDos"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hidden_Otro_texto"
        android:textColorHint="@color/texto_secundario"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/padreUno"
        app:startIconDrawable="@drawable/insert_der">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/texto_usuario"
            android:textSize="@dimen/input"
            android:textStyle="italic" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/viewModelTextResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/hidden_pregunta"
        android:textAlignment="center"
        android:textColor="@color/texto_usuario"
        android:textColorHint="@color/texto_secundario"
        android:textSize="@dimen/respuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/padreDos" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custon_button"
        android:text="@string/button_comparar"
        android:textSize="@dimen/button"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewModelTextResultado" />

    <Button
        android:id="@+id/buttonLimpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custon_button"
        android:text="@string/button_reiniciar"
        android:textSize="@dimen/button"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewModelTextResultado" />


</androidx.constraintlayout.widget.ConstraintLayout>